--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -148,7 +148,7 @@ jobs:
   terraform_plan:
     runs-on: ubuntu-latest
     name: Plan Terraform Configuration
-    env:
+    # env:
     #   #Azure
     #   ARM_TENANT_ID: ${{ secrets.azure_tenant_id }}
     #   ARM_SUBSCRIPTION_ID: ${{ secrets.azure_subscription_id }}
@@ -158,10 +158,10 @@ jobs:
     #   ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
     #   ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
     #   #Oracle Cloud
-      TF_VAR_TENANCY_OCID: ${{ secrets.oci_tenancy }}
-      TF_VAR_USER_OCID: ${{ secrets.oci_user }}
-      TF_VAR_PRIVATE_KEY: ${{ secrets.oci_key }}
-      TF_VAR_FINGERPRINT: ${{ secrets.oci_fingerprint }}
+      # TF_VAR_TENANCY_OCID: ${{ secrets.oci_tenancy }}
+      # TF_VAR_USER_OCID: ${{ secrets.oci_user }}
+      # TF_VAR_PRIVATE_KEY: ${{ secrets.oci_key }}
+      # TF_VAR_FINGERPRINT: ${{ secrets.oci_fingerprint }}
     #   #S3 Backend
     #  AWS_REGION: ${{ inputs.aws_region }}
     #  AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
@@ -185,13 +185,13 @@ jobs:
           echo "ARM_CLIENT_ID=${{ secrets.azure_client_id }}" >> $GITHUB_ENV
           echo "ARM_CLIENT_SECRET=${{ secrets.azure_client_secret }}" >> $GITHUB_ENV
 
-      # - name: Set Oracle Cloud environment variables
-      #   if: inputs.provider_oci == true
-      #   run: |
-      #     echo "TF_VAR_TENANCY_OCID=${{ secrets.oci_tenancy }}" >> $GITHUB_ENV
-      #     echo "TF_VAR_USER_OCID=${{ secrets.oci_user }}" >> $GITHUB_ENV
-      #     echo "TF_VAR_PRIVATE_KEY=${{ secrets.oci_key }}" >> $GITHUB_ENV
-      #     echo "TF_VAR_FINGERPRINT=${{ secrets.oci_fingerprint }}" >> $GITHUB_ENV
+      - name: Set Oracle Cloud environment variables
+        if: inputs.provider_oci == true
+        run: |
+          echo "TF_VAR_TENANCY_OCID=${{ secrets.oci_tenancy }}" >> $GITHUB_ENV
+          echo "TF_VAR_USER_OCID=${{ secrets.oci_user }}" >> $GITHUB_ENV
+          echo "TF_VAR_PRIVATE_KEY=${{ secrets.oci_key }}" >> $GITHUB_ENV
+          echo "TF_VAR_FINGERPRINT=${{ secrets.oci_fingerprint }}" >> $GITHUB_ENV
 
       - name: Set S3 backend environment variables
         if: inputs.backend_type == 's3'
