--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -303,7 +303,7 @@ jobs:
 
       - name: Terraform Init with Azure backend
         if: inputs.backend_type == 'azure'
-        id: init_azure_backend
+        id: init_backend_azure
         working-directory: ${{ inputs.config_directory }}
         run: |
           terraform init \
@@ -314,7 +314,7 @@ jobs:
 
       - name: Terraform Init with S3 backend
         if: inputs.backend_type == 's3'
-        id: init_s3_backend
+        id: init_backend_s3
         working-directory: ${{ inputs.config_directory }}
         run: |
           terraform init \
@@ -331,4 +331,22 @@ jobs:
         working-directory: ${{ inputs.config_directory }}
         # continue-on-error: true
         run: |
-          terraform apply -auto-approve "plan_output.tfplan"
+          output=$(terraform apply -auto-approve "plan_output.tfplan" | tee /dev/tty)
+          apply_output=$(echo "$output" | grep '^Apply')
+          echo "::set-output name=stdout::$apply_output"
+
+      - name: Comment Apply Output
+        if: always() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        env:
+          APPLY_OUTPUT: ${{ steps.apply.outputs.stdout }}
+        with:
+          github-token: ${{ secrets.github_pat }}
+          script: |
+            const output = `${process.env.APPLY_OUTPUT}`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
