--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -237,7 +237,12 @@ jobs:
           script: |
             const fs = require('fs');
             const planOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/plan_output.txt', 'utf8');
-            const output = `Terraform Plan Output:\n\`\`\`\n${planOutput}\n\`\`\``;
+            const output = `
+              <details>
+              <summary>Terraform Plan Output (click to expand)</summary>
+              \n\`\`\`\n${planOutput}\n\`\`\`
+              </details>
+            `;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
