--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -239,7 +239,7 @@ jobs:
             const planOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/plan_output.txt', 'utf8');
             const output = `
               <details>
-              <summary>Terraform Plan Output (click to expand)</summary>
+              <summary>${{ inputs.config_directory }} - Terraform Plan Output (click to expand)</summary>
               \n\`\`\`\n${planOutput}\n\`\`\`
               </details>
             `;
@@ -346,7 +346,7 @@ jobs:
         with:
           github-token: ${{ secrets.github_pat }}
           script: |
-            const applyOutput = '${{ steps.apply.outputs.stdout }}';
+            const applyOutput = '${{ inputs.config_directory }} - ${{ steps.apply.outputs.stdout }}';
             if (applyOutput) {
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
