--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -131,6 +131,7 @@ on:
         required: false
 
 jobs:
+  #Terraform Plan
   terraform_plan:
     runs-on: ubuntu-latest
     name: Plan Terraform Configuration
@@ -250,8 +251,64 @@ jobs:
               body: output
             });
 
-  terraform_apply:
+  #Checkov
+  checkov_scan:
     needs: terraform_plan
+    runs-on: ubuntu-latest
+    name: Checkov Security Scan
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4 
+
+      - name: Download Plan JSON
+        uses: actions/download-artifact@v4
+        with:
+          name: tfplan-json
+          path: ${{ inputs.config_directory }}
+
+      - name: Install Checkov
+        run: |
+          pip install checkov
+
+      - name: Run Checkov Scan
+        working-directory: ${{ inputs.config_directory }}
+        run: |
+          checkov -f plan_output.json --quiet
+
+      # Optional: Upload Checkov Scan results as an artifact
+      - name: Upload Checkov Scan Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-report
+          path: ${{ inputs.config_directory }}/checkov_report/
+
+      # Optional: Comment Checkov Scan results on PR
+      - name: Comment Checkov Scan Output
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.github_pat }}
+          script: |
+            const fs = require('fs');
+            const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/checkov_report/';
+            const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.txt', 'utf8');
+            const output = `
+              <details>
+              <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
+              \n\`\`\`\n${checkovReport}\n\`\`\`
+              </details>
+            `;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
+
+  #Terraform Apply
+  terraform_apply:
+    needs: [terraform_plan, checkov_scan]
     runs-on: ubuntu-latest
     name: Apply Terraform Configuration
     env:
@@ -334,7 +391,6 @@ jobs:
       - name: Terraform Apply
         id: apply
         working-directory: ${{ inputs.config_directory }}
-        # continue-on-error: true
         run: |
           terraform apply -auto-approve "plan_output.tfplan" > apply_output.txt
           apply_output=$(grep '^Apply' apply_output.txt)
