--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -282,7 +282,7 @@ jobs:
     if: ${{ inputs.checkov_scan }}
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4 
+        uses: actions/checkout@v4
 
       - name: Download Plan JSON
         uses: actions/download-artifact@v4
@@ -297,7 +297,8 @@ jobs:
       - name: Run Checkov Scan
         working-directory: ${{ inputs.config_directory }}
         run: |
-          checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ github.workspace }}/${{ inputs.config_directory }} --deep-analysis
+          checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ github.workspace }}/${{ inputs.config_directory }} --deep-analysis \
+          ls -lha
 
       # Optional: Upload Checkov Scan results as an artifact
       - name: Upload Checkov Scan Report
@@ -306,6 +307,7 @@ jobs:
         with:
           name: checkov-report
           path: ${{ inputs.config_directory }}
+          overwrite: true
 
       # Optional: Comment Checkov Scan results on PR
       - name: Comment Checkov Scan Output
@@ -315,7 +317,7 @@ jobs:
           github-token: ${{ secrets.github_pat }}
           script: |
             const fs = require('fs');
-            const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/checkov_report/';
+            const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}';
             const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.txt', 'utf8');
             const output = `
               <details>
