--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -298,7 +298,7 @@ jobs:
         working-directory: ${{ inputs.config_directory }}
         run: |
           checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ github.workspace }}/${{ inputs.config_directory }} --deep-analysis \
-          ls -lha
+          ls -lha \
 
       # Optional: Upload Checkov Scan results as an artifact
       - name: Upload Checkov Scan Report
