--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -266,7 +266,7 @@ jobs:
               body: output
             });
 
-  # $$$$$$\  $$\                           $$\                           
+  #  $$$$$$\  $$\                           $$\                           
   # $$  __$$\ $$ |                          $$ |                          
   # $$ /  \__|$$$$$$$\   $$$$$$\   $$$$$$$\ $$ |  $$\  $$$$$$\ $$\    $$\ 
   # $$ |      $$  __$$\ $$  __$$\ $$  _____|$$ | $$  |$$  __$$\\$$\  $$  |
@@ -297,9 +297,10 @@ jobs:
       - name: Run Checkov Scan
         working-directory: ${{ inputs.config_directory }}
         run: |
-          checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ github.workspace }}/${{ inputs.config_directory }} --deep-analysis \
-          ls -lha \
+          checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ inputs.config_directory }} --deep-analysis --output cli --output junitxml --output-file-path console, ${{ inputs.config_directory }}/checkov_report.xml
 
+      - name: ELES
+        run: ls -lha ${{ inputs.config_directory }}
       # Optional: Upload Checkov Scan results as an artifact
       - name: Upload Checkov Scan Report
         if: always()
@@ -317,8 +318,8 @@ jobs:
           github-token: ${{ secrets.github_pat }}
           script: |
             const fs = require('fs');
-            const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}';
-            const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.txt', 'utf8');
+            const checkovReportPath = '${{ inputs.config_directory }}';
+            const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
             const output = `
               <details>
               <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
