--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -300,6 +300,7 @@ jobs:
           checkov -f plan_output.json --quiet --repo-root-for-plan-enrichment ${{ inputs.config_directory }} --deep-analysis --output cli --output junitxml --output-file-path console, checkov_report.xml
 
       - name: Eles
+        if: always()
         working-directory: ${{ inputs.config_directory }}
         run: |
           ls -lha
