--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -320,38 +320,38 @@ jobs:
           path: ${{ inputs.config_directory }}/checkov_report.xml
           overwrite: true
 
-      # - name: Comment Checkov Scan Output
-      #   if: github.event_name == 'pull_request'
-      #   uses: actions/github-script@v7
-      #   with:
-      #     github-token: ${{ secrets.github_pat }}
-      #     script: |
-      #       const fs = require('fs');
-      #       const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
-      #       const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
-      #       const output = `
-      #         <details>
-      #         <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
-      #         \n\`\`\`\n${checkovReport}\n\`\`\`
-      #         </details>
-      #       `;
-      #       github.rest.issues.createComment({
-      #         issue_number: context.issue.number,
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         body: output
-      #       });
-
-      - name: Publish Checkov Test Results
+      - name: Comment Checkov Scan Output
         if: github.event_name == 'pull_request'
-        uses: EnricoMi/publish-unit-test-result-action@v2
+        uses: actions/github-script@v7
         with:
-          github_token: ${{ secrets.github_pat }}
-          github_token_actor: SpinnerBot
-          check_name: Checkov Test Results for ${{ inputs.config_directory }}
-          files: ${{ inputs.config_directory }}/checkov_report.xml
-          job_summary: true
-          report_individual_runs: true
+          github-token: ${{ secrets.github_pat }}
+          script: |
+            const fs = require('fs');
+            const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
+            const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
+            const output = `
+              <details>
+              <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
+              \n\`\`\`\n${checkovReport}\n\`\`\`
+              </details>
+            `;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
+
+      # - name: Publish Checkov Test Results
+      #   if: github.event_name == 'pull_request'
+      #   uses: EnricoMi/publish-unit-test-result-action@v2
+      #   with:
+      #     github_token: ${{ secrets.github_pat }}
+      #     github_token_actor: SpinnerBot
+      #     check_name: Checkov Test Results for ${{ inputs.config_directory }}
+      #     files: ${{ inputs.config_directory }}/checkov_report.xml
+      #     job_summary: true
+      #     report_individual_runs: true
 
   # $$$$$$\                      $$\           
   # $$  __$$\                     $$ |          
