--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -320,6 +320,28 @@ jobs:
           path: ${{ inputs.config_directory }}/checkov_report.xml
           overwrite: true
 
+      # - name: Comment Checkov Scan Output
+      #   if: github.event_name == 'pull_request'
+      #   uses: actions/github-script@v7
+      #   with:
+      #     github-token: ${{ secrets.github_pat }}
+      #     script: |
+      #       const fs = require('fs');
+      #       const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
+      #       const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
+      #       const output = `
+      #         <details>
+      #         <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
+      #         \n\`\`\`\n${checkovReport}\n\`\`\`
+      #         </details>
+      #       `;
+      #       github.rest.issues.createComment({
+      #         issue_number: context.issue.number,
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         body: output
+      #       });
+
       - name: Comment Checkov Scan Output
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
@@ -327,19 +349,36 @@ jobs:
           github-token: ${{ secrets.github_pat }}
           script: |
             const fs = require('fs');
+            const { parseStringPromise } = require('xml2js');
             const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
-            const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
-            const output = `
-              <details>
-              <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
-              \n\`\`\`\n${checkovReport}\n\`\`\`
-              </details>
-            `;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
+            const checkovReportXML = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
+
+            parseStringPromise(checkovReportXML).then(result => {
+              const properties = result.testsuites.testsuite[0].properties[0].property;
+              let markdownTable = `
+                | Property | Value |
+                | --- | --- |
+              `;
+              properties.forEach(prop => {
+                markdownTable += `| ${prop.$.name} | ${prop.$.value} |\n`;
+              });
+
+              const output = `
+                <details>
+                  <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
+                  ${markdownTable}
+                </details>
+              `;
+
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              });
+            }).catch(err => {
+              console.error('Failed to parse Checkov report XML:', err);
+              // Handle error
             });
 
       # - name: Publish Checkov Test Results
