--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -278,120 +278,13 @@ jobs:
   checkov_scan:
     uses:  ./.github/workflows/step_checkov_scan.yml
     needs: terraform_plan
-    # runs-on: ubuntu-latest
-    name: Checkov Security Scan
-    # if: ${{ inputs.checkov_scan }}
+    if: ${{ inputs.checkov_scan }}
     with:
       config_directory: ${{ inputs.config_directory }}
-      checkov_scan: true
       github_owner: ${{ inputs.github_owner }}
     secrets:
       github_pat: ${{ secrets.github_pat }}
 
-    # steps:
-    #   - name: Checkout Repository
-    #     uses: actions/checkout@v4
-
-    #   - name: Download Plan JSON
-    #     uses: actions/download-artifact@v4
-    #     with:
-    #       name: tfplan-json
-    #       path: ${{ inputs.config_directory }}
-
-    #   - name: Install Checkov
-    #     run: |
-    #       pip install checkov
-
-    #   - name: Run Checkov Scan
-    #     working-directory: ${{ inputs.config_directory }}
-    #     run: |
-    #       checkov \
-    #         --file plan_output.json \
-    #         --repo-root-for-plan-enrichment ${{ inputs.config_directory }} \
-    #         --deep-analysis \
-    #         --output cli \
-    #         --output junitxml \
-    #         --output-file-path console,checkov_report.xml
-
-    #   - name: Upload Checkov Scan Report
-    #     if: always()
-    #     uses: actions/upload-artifact@v4
-    #     with:
-    #       name: checkov-report
-    #       path: ${{ inputs.config_directory }}/checkov_report.xml
-    #       overwrite: true
-
-    #   - name: Comment Checkov Scan Output
-    #     if: github.event_name == 'pull_request'
-    #     uses: actions/github-script@v7
-    #     with:
-    #       github-token: ${{ secrets.github_pat }}
-    #       script: |
-    #         const fs = require('fs');
-    #         const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
-    #         const checkovReport = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
-    #         const output = `
-    #           <details>
-    #           <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
-    #           \n\`\`\`\n${checkovReport}\n\`\`\`
-    #           </details>
-    #         `;
-    #         github.rest.issues.createComment({
-    #           issue_number: context.issue.number,
-    #           owner: context.repo.owner,
-    #           repo: context.repo.repo,
-    #           body: output
-    #         });
-
-      # - name: Comment Checkov Scan Output
-      #   if: github.event_name == 'pull_request'
-      #   uses: actions/github-script@v7
-      #   with:
-      #     github-token: ${{ secrets.github_pat }}
-      #     script: |
-      #       const fs = require('fs');
-      #       const { parseStringPromise } = require('xml2js');
-      #       const checkovReportPath = '${{ github.workspace }}/${{ inputs.config_directory }}/';
-      #       const checkovReportXML = fs.readFileSync(checkovReportPath + 'checkov_report.xml', 'utf8');
-
-      #       parseStringPromise(checkovReportXML).then(result => {
-      #         const properties = result.testsuites.testsuite[0].properties[0].property;
-      #         let markdownTable = `
-      #           | Property | Value |
-      #           | --- | --- |
-      #         `;
-      #         properties.forEach(prop => {
-      #           markdownTable += `| ${prop.$.name} | ${prop.$.value} |\n`;
-      #         });
-
-      #         const output = `
-      #           <details>
-      #             <summary>${{ inputs.config_directory }} - Checkov Scan Results (click to expand)</summary>
-      #             ${markdownTable}
-      #           </details>
-      #         `;
-
-      #         github.rest.issues.createComment({
-      #           issue_number: context.issue.number,
-      #           owner: context.repo.owner,
-      #           repo: context.repo.repo,
-      #           body: output
-      #         });
-      #       }).catch(err => {
-      #         console.error('Failed to parse Checkov report XML:', err);
-      #         // Handle error
-      #       });
-
-      # - name: Publish Checkov Test Results
-      #   if: github.event_name == 'pull_request'
-      #   uses: EnricoMi/publish-unit-test-result-action@v2
-      #   with:
-      #     github_token: ${{ secrets.github_pat }}
-      #     github_token_actor: SpinnerBot
-      #     check_name: Checkov Test Results for ${{ inputs.config_directory }}
-      #     files: ${{ inputs.config_directory }}/checkov_report.xml
-      #     job_summary: true
-      #     report_individual_runs: true
 
   # $$$$$$\                      $$\           
   # $$  __$$\                     $$ |          
